# mew

./: .commitlintrc.json  .editorconfig  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  release-please-config.json  run_tests.sh  test.sh
mew/: .gitignore  Cargo.toml  ISSUES_AND_MISSING_FEATURES.md  test_mutations.mew  test_ontology.mew  test_session.mew  test_wrapper.mew
mew/analyzer/: Cargo.toml
mew/analyzer/src/: analyzer.rs  error.rs  types.rs
mew/compiler/: Cargo.toml
mew/compiler/src/: compiler.rs  error.rs
mew/constraint/: Cargo.toml
mew/constraint/src/: checker.rs  lib.rs  violation.rs
mew/core/: Cargo.toml
mew/core/src/: error.rs  id.rs  lib.rs  messages.rs  value.rs
mew/graph/: Cargo.toml
mew/graph/src/: index.rs
mew/journal/src/: entry.rs  error.rs  journal.rs  lib.rs
mew/mew-analyzer/: Cargo.toml
mew/mew-analyzer/src/: analyzer.rs  error.rs  lib.rs  scope.rs  types.rs
mew/mew-compiler/src/: compiler.rs  error.rs  lib.rs
mew/mew-constraint/src/: checker.rs  error.rs  lib.rs
mew/mew-core/src/: entity.rs  lib.rs  value.rs
mew/mew-examples/: Cargo.toml
mew/mew-examples/src/: assertion.rs  lib.rs  scenario.rs
mew/mew-examples/tests/: level1_bookmarks.rs
mew/mew-graph/src/: graph.rs  lib.rs
mew/mew-journal/: Cargo.toml
mew/mew-journal/src/: entry.rs  journal.rs  lib.rs
mew/mew-mutation/: Cargo.toml
mew/mew-mutation/src/: error.rs  executor.rs  lib.rs  result.rs  validation.rs
mew/mew-mutation/src/ops/: kill.rs  mod.rs
mew/mew-parser/: Cargo.toml
mew/mew-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
mew/mew-parser/src/parser/: mod.rs  ontology.rs  pattern.rs  stmt.rs
mew/mew-pattern/: Cargo.toml
mew/mew-pattern/src/: binding.rs  error.rs  eval.rs  lib.rs  matcher.rs  pattern.rs
mew/mew-query/: Cargo.toml
mew/mew-query/src/: executor.rs  lib.rs  plan.rs
mew/mew-registry/src/: builder.rs  lib.rs  registry.rs  types.rs
mew/mew-repl/: Cargo.toml
mew/mew-repl/src/: block.rs  executor.rs  format.rs  main.rs  repl.rs
mew/mew-rule/: Cargo.toml
mew/mew-rule/src/: engine.rs  lib.rs
mew/mew-session/: Cargo.toml
mew/mew-session/src/: error.rs  lib.rs  session.rs
mew/mew-testgen/: Cargo.toml
mew/mew-testgen/src/: config.rs  lib.rs  types.rs
mew/mew-testgen/src/execution/: mod.rs
mew/mew-testgen/src/mutation/: mod.rs
mew/mew-testgen/src/oracle/: mod.rs
mew/mew-testgen/src/query/: mod.rs
mew/mew-testgen/src/report/: mod.rs
mew/mew-testgen/src/schema/: mod.rs
mew/mew-testgen/src/trust/: mod.rs
mew/mew-testgen/src/world/: mod.rs
mew/mew-testgen/tests/: level1_integration.rs
mew/mew-tests/: Cargo.toml
mew/mew-tests/src/: assertion.rs  error.rs  lib.rs  loader.rs  runner.rs
mew/mew-tests/tests/: level1_bookmarks.rs  level1_contacts.rs  level2_tasks.rs  level3_eventchain.rs  level3_projectmanagement.rs  level4_argumentation.rs  level4_scientific.rs  level5_bdi.rs  level5_cognitiveagent.rs
mew/mew-transaction/: Cargo.toml
mew/mew-transaction/src/: buffer.rs  error.rs  lib.rs  manager.rs
mew/mutation/: Cargo.toml
mew/mutation/src/: error.rs  executor.rs  lib.rs  result.rs  validation.rs
mew/mutation/src/ops/: kill.rs  link.rs  mod.rs  set.rs  spawn.rs  unlink.rs
mew/parser/src/: ast.rs  lexer.rs  lib.rs
mew/parser/src/parser/: expr.rs  mod.rs  ontology.rs  pattern.rs  stmt.rs
mew/pattern/: Cargo.toml
mew/pattern/src/: binding.rs  error.rs  eval.rs  lib.rs  matcher.rs  pattern.rs  target.rs
mew/playground/: Cargo.toml
mew/playground/src/: bindings.rs  completions.rs  graph_export.rs  lib.rs  session.rs
mew/playground/web/: .gitignore  DESIGN_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mew/playground/web/scripts/: build-specs-index.ts
mew/playground/web/server/: index.ts  specs-index.json  tools.ts
mew/playground/web/src/: App.tsx  api.ts  main.ts  main.tsx  types.ts
mew/playground/web/src/ai/: chat.ts  client.ts  index.ts  prompts.ts  types.ts
mew/playground/web/src/ai/providers/: anthropic.ts  base.ts  google.ts  index.ts  openai.ts
mew/playground/web/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx  ChatPanel.tsx  CodeBlock.tsx  (+1 more)
mew/playground/web/src/editor/: completions.ts  index.ts  setup.ts  tokens.ts
mew/playground/web/src/hooks/: useAIToolActions.ts
mew/playground/web/src/providers/: WasmProvider.tsx
mew/playground/web/src/stores/: chat.ts  editor.ts  index.ts  results.ts  session.ts  ui.ts  view.ts
mew/playground/web/src/styles/: main.css
mew/playground/web/src/viz/: analyzer.ts  auto-renderer.ts  content-renderer.ts  hitmap.ts  index.ts  renderer.ts  result-analyzer.ts  strategy.ts  world-canvas.ts
mew/query/: Cargo.toml
mew/query/src/: aggregates.rs  error.rs  executor.rs  lib.rs  operators.rs  plan.rs  result.rs
mew/registry/: Cargo.toml
mew/registry/src/: builder.rs  lib.rs  registry.rs  types.rs
mew/repl/: Cargo.toml
mew/repl/src/: executor.rs  format.rs  lib.rs  main.rs  repl.rs
mew/rule/src/: error.rs
mew/session/: Cargo.toml
mew/session/src/: error.rs  lib.rs  query.rs  result.rs  session.rs  transaction.rs
mew/testgen/: Cargo.toml
mew/testgen/src/: types.rs
mew/testgen/src/execution/: mod.rs
mew/testgen/src/mutation/: mod.rs
mew/testgen/src/oracle/: mod.rs
mew/testgen/src/report/: mod.rs
mew/testgen/src/schema/: mod.rs
mew/testgen/src/trust/: mod.rs
mew/testgen/src/world/: mod.rs
mew/tests/: Cargo.toml
mew/tests/src/: assertion.rs  lib.rs  loader.rs  runner.rs  scenario.rs  value_ext.rs
mew/tests/tests/: level1_bookmarks.rs  level1_contacts.rs  level1_expressions.rs  level1_library.rs  level2_ecommerce.rs  level2_humanresources.rs  level2_tasks.rs  level3_audit.rs  level3_auth.rs  level3_eventchain.rs  level3_notifications.rs  level3_projectmanagement.rs  level3_social.rs  level3_workflow.rs  level4_argumentation.rs  level4_factbase.rs  level4_scientific.rs  level5_bdi.rs  level5_cognitiveagent.rs  level5_conceptnet.rs
mew/transaction/src/: buffer.rs  manager.rs
(+462 files in other folders)
