[workspace]
resolver = "2"
members = [
    "core",
    "graph",
    "parser",
    "analyzer",
    "registry",
    "compiler",
    "pattern",
    "constraint",
    "rule",
    "query",
    "mutation",
    "transaction",
    "journal",
    "session",
    "repl",
    "testgen",
    "tests",
    "playground",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MEW Contributors"]
license = "MIT"
repository = "https://github.com/mew/mew"

[workspace.dependencies]
# Internal crates
mew-core = { path = "core" }
mew-graph = { path = "graph" }
mew-parser = { path = "parser" }
mew-analyzer = { path = "analyzer" }
mew-registry = { path = "registry" }
mew-compiler = { path = "compiler" }
mew-pattern = { path = "pattern" }
mew-constraint = { path = "constraint" }
mew-rule = { path = "rule" }
mew-query = { path = "query" }
mew-mutation = { path = "mutation" }
mew-transaction = { path = "transaction" }
mew-journal = { path = "journal" }
mew-session = { path = "session" }
mew-testgen = { path = "testgen" }

# External dependencies
thiserror = "2.0"
# Lightweight regex for attribute constraint validation (match patterns, UUID format).
# Chosen over full `regex` crate: smaller binary, no Unicode overhead, sufficient for schema validation.
regex-lite = "0.1"
