[package]
name = "mew-testgen"
version.workspace = true
edition.workspace = true

[dependencies]
mew-core.workspace = true
mew-graph.workspace = true
mew-registry.workspace = true
mew-parser.workspace = true
mew-compiler.workspace = true
mew-session.workspace = true
mew-query.workspace = true
mew-mutation.workspace = true
mew-pattern.workspace = true
thiserror.workspace = true
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
