[package]
name = "mew-pattern"
version.workspace = true
edition.workspace = true

[dependencies]
mew-core.workspace = true
mew-graph.workspace = true
mew-parser.workspace = true
mew-registry.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
