[package]
name = "mew-playground"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM-based playground for MEW"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mew-core.workspace = true
mew-parser.workspace = true
mew-compiler.workspace = true
mew-graph.workspace = true
mew-registry.workspace = true
mew-query.workspace = true
mew-mutation.workspace = true
mew-session.workspace = true

wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
